[package]
name = "x509-client"
version = "1.0.2"
edition = "2021"

[dependencies]
log = { version = "0.4.19" }
url = { version = "2.4.0" }
http = { version = "0.2.9" }
tokio = { version = "1.30.0", features = ["fs"] }
openssl = { version = "0.10.56", features = ["vendored"], optional = true }
cms = { version = "0.2.2", features = ["std"], optional = true }
reqwest = { version = "0.11.18", features = ["native-tls"] }
bytes = { version = "1" }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }

[features]
openssl = ["dep:openssl", "dep:cms"]
