[package]
name = "x509-client"
version = "1.0.2"
edition = "2021"
authors = ["Curtis Lee Fulton <curtis@ciphx.com>"]
repository = "https://github.com/merlincinematic/x509-client"
readme = "README.md"
license = "Apache-2.0"
categories = ["web-programming::http-client", "network-programming", "parser-implementations", "parsing"]
keywords = ["x509", "der", "pem", "pkcs7", "http"]
description = "Reqwest-based async X509 certificate transport and deserializer client. Transports: HTTP/S, File. Formats: DER, PEM, PKCS7."
homepage = "https://ciphx.com"
exclude = ["/.github", "/.gitignore"]

[dependencies]
log = { version = "0.4.19" }
url = { version = "2.4.0" }
http = { version = "0.2.9" }
tokio = { version = "1.30.0", features = ["fs"] }
openssl = { version = "0.10.56", features = ["vendored"], optional = true }
cms = { version = "0.2.2", features = ["std"], optional = true }
reqwest = { version = "0.11.18", features = ["native-tls"] }
bytes = { version = "1" }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }

[features]
openssl = ["dep:openssl", "dep:cms"]
